# demo

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.py
demo/: __init__.py
demo/handlers/: generator.py
demo/models/orm_models/data/: ytest.py
demo/routes/: generator.py
demo/services/aggregation/: __init__.py
